--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,10 @@
   <link href="/assets/ext-all.css" rel="stylesheet" type="text/css" />
   <script src="/assets/ext-all.js" type="text/javascript"></script>
   <script src="/assets/ext-lang-zh_CN.js" type="text/javascript"></script>
-  <%= stylesheet_link_tag "application", :debug => false %>
+  <link href="/assets/ext-ux-all.css" rel="stylesheet" type="text/css" />
+  <script src="/assets/ext-ux-all.js", type="text/javascript"></script>
+  <script src="/assets/ext-ux-lang-zh_CN.js" type="text/javascript"></script>
+  <%= stylesheet_link_tag "application", :media => 'all', :debug => false %>
   <%= javascript_include_tag "application", :debug => false %>
 </head>
 <body>
